<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.prateekj.android.activities.NotificationActivity">

    <Button
        android:layout_width="match_parent"
        android:id="@+id/generate_notifications"
        android:onClick="generateNotification"
        android:text="@string/generate_notifications"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:onClick="wearableSpecificNotifications"
        android:text="@string/generate_wearable_notifications"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:onClick="bigStyleNotifications"
        android:text="@string/big_style_notification"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:onClick="voiceReplyNotification"
        android:text="@string/voice_reply_notification"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:onClick="pageNotification"
        android:text="@string/page_notification"
        android:layout_height="wrap_content"/>

</LinearLayout>
