<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prateekj.android.SettingActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/setting_description"/>

    <LinearLayout
        android:layout_below="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:maxLength="15"
            android:id="@+id/server_ip_container"
            android:hint="@string/server_ip"
            android:layout_weight="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/save_ip_button"
            android:layout_toRightOf="@+id/server_ip_container"
            android:layout_alignParentRight="true"
            android:text="@string/set_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
